--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
-.Navigation Bar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    }
+
+    li {
+    float: left;
+    vertical-align: middle; 
+     }
+
+    li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 8px 10px;
+    text-decoration: none;
+    }
+
+
+    li a:hover {
+    background-color: #111;
+    }
