--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
     li a {
     display: inline-block;
-    color: red;
+    color: blue;
     text-align: center;
     padding: 8px 10px;
     text-decoration: none;
