--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
       float: left;	
   }	
 
+
   .navigation-element a, .dropbtn {	
       display: inline-block;	
       color: white;	
@@ -59,4 +60,13 @@
     margin-left: 2%;
 
 }
+
+/* Styling for footer, causes elements to be displayed horizontaly*/
+.footer-element {
+    display: inline-block;	
+    color: white;	
+    text-align: center;	
+	padding: 0px 8px;
+    text-decoration: none;
+  }
    
