--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+  /* -- general styling -- */
+  a{
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  
+  
+  
   /* --styling for navigation bar --*/ 
   .navigation-bar {	 
       list-style-type: none;	
