--- a/style.css
+++ b/style.css
@@ -1,108 +1,98 @@
-  /* -- general styling -- */
+/* -- general styling -- */
   a{ /*anchor links inherit styling from parent class*/
     color: inherit;
     text-decoration: none;
   }
-  
-  /* sizing and positioning of pictures in recipes */
-  /*.picture { 
-    width: 60%;
-    height: 60%;
-    margin-left: 20%;
-    box-shadow: 10px 10px 5px #333;
-  } 
-  */
+
   body{
     margin: 0;
     padding: 0;
     background-color: white;
   }
-  .main-container
-  {
-    min-height: 100vh;
-    position: relative;
-    background-color: white;
+
+/* -- Recipe Styling -- */
+.t1
+{
+  display: flex;
+  padding: 0;
+  background-color: aliceblue;
+  
+}
+
+.f1{
+  flex: 2;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.f2{
+  flex: 1;
+  text-align: left;
+}
+
+h1{
+  font-size: 30px;
+  text-align: center;
+}
+
+h2{
+  margin-left: 18%;
+}
+
+p{
+  margin-left: 20%;
+  margin-right: 20%;
+  right: 15%;
+  font-size: 28px;
+}
+
+.recipe { 
+list-style-type: none;
+display:inline-block;
+border:2px solid #000;
+padding:20px;
+font-size: 24px;
+margin-left: 20%;
+box-shadow: 10px 10px 5px #333;
+background-color: aliceblue;
+}
+
+.picture {   
+width: 100%;
+padding: 0;
+margin: 0;
+} 
+
+@media only screen and (max-width: 1000px){
+  .t1{
+    display: block;
     padding: 0;
+    background-color: aliceblue;
+    
+  }
+
+  .f1{ 
     margin: 0;
+    padding: 0;
+    width: 100%;
   }
 
-  /* styling for recipe list */
-  /*.recipe { 
-    list-style-type: none;
-    display:inline-block;
-    border:2px solid #000;
-    padding:20px;
-    font-size: 24px;
-    margin-left: 2%;
-    box-shadow: 10px 10px 5px #333
+  .f2{
+    padding: 0;
   }
-  */
-  /*
-  .cookInstruct {
-    font-size: 24px;
-    margin-left: 2%;
-    width: 80%;
-  }
-  */
-  
-  /* --styling for navigation bar --*/ 
-  
-  .navigation-bar {	 
-      list-style-type: none;	
-      margin: 0;	
-      padding: 0;	
-      background-color: #333;	
-      position: fixed;	
-      top: 0;	
-      width: 100%;
-      	
-  }	
-  
-  .navigation-element {	
-      float: left;	
-  }	
+
+}
   
 
-  .navigation-element a, .dropbtn {	
-      display: inline-block;	
-      color: white;	
-      text-align: center;	
-      padding: 10px 8px;	
-      text-decoration: none;	
-  }	
-  
-  .navigation-element a:hover, .dropdown:hover .dropbtn {	
-      background-color: #111;	
-  }	
 
-  li.dropdown {	
-      display: inline-block;	
-  }	
 
-  .dropdown-content {	
-      display: none;	
-      position: absolute;	
-      background-color: #333;	
-      min-width: 160px;	
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);	
-      z-index: 1;	
-  }	
 
-  .dropdown-content a {	
-      color: white;	
-      padding: 12px 16px;	
-      text-decoration: none;	
-      display: block;	
-      text-align: left;	
-  }	
 
-  .dropdown-content a:hover {background-color: #111;}	
 
-  .dropdown:hover .dropdown-content {	
-       display: block;	
-   }	
 
-/* Styling for recipes */
+
+
 
 /* Styling for glossary entrys, class="glossary-entry" */
 .glossary-entry {
@@ -110,22 +100,5 @@
 
 }
 
-/* Styling for footer, causes elements to be displayed horizontaly*/
-
-.footer-element {
-    display: inline-block;	
-    color: white;	
-    /*text-align: center;*/	
-    padding: 10px 8px;
-    text-decoration: none;
-}
 
 
-/*.footer-bar
-{
-  position: absolute;
-}*/
-.footer-bar{
-bottom: 0;
-
-}
