--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 {
   display: flex;
   padding: 0;
-  background-color: aliceblue;
+  background-color:aliceblue;
   
 }
 
@@ -59,7 +59,7 @@ background-color: aliceblue;
 }
 
 .picture {   
-width: 100%;
+width: 90%;
 padding: 0;
 margin: 0;
 } 
@@ -82,6 +82,9 @@ margin: 0;
     padding: 0;
   }
 
+  .picture{
+    width: 100%;
+  }
 }
   
 
